Update to version 1.4-0+nmu1

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,3 +2,4 @@ SUBDIRS = src tests python
 librtfcomp_ladir=$(includedir)/rtfcomp
 librtfcomp_la_HEADERS = $(top_srcdir)/include/rtfcomp/rtfcomp.h $(top_srcdir)/include/rtfcomp/errors.h
 EXTRA_DIST = LICENCE CHANGELOG
+ACLOCAL_AMFLAGS = -I m4
