--- a/debian/rules
+++ b/debian/rules
@@ -11,7 +11,7 @@ endif
 
 CFLAGS += -I../../include/ -Wall -g -O$(if $(findstring noopt,$(DEB_BUILD_OPTIONS)),0,2)
 
-PYVERS := $(shell pyversions -vr debian/control 2>/dev/null)
+PYVERS := $(shell py3versions -vr debian/control 2>/dev/null)
 
 build-%/configure-stamp: configure
 	dh_testdir
@@ -31,22 +31,32 @@ build: $(PYVERS:%=build-%/build-stamp)
 install-clean:
 	dh_testdir
 	dh_testroot
-	dh_clean -k
+	dh_clean
 
 install-%: build-%/build-stamp
 	dh_testdir
 	dh_testroot
 	$(MAKE) -C build-$* install DESTDIR=$(CURDIR)/debian/tmp
+	libtool --finish /usr/lib
+	libtool --finish /usr/lib/python3/dist-packages
 	dh_install
 
 install: $(PYVERS:%=install-%)
-	rm $(CURDIR)/debian/python-rtfcomp/usr/lib/python*/*-packages/*.la \
-	  $(CURDIR)/debian/python-rtfcomp/usr/lib/python*/*-packages/*.a
+	rm $(CURDIR)/debian/python3-rtfcomp/usr/lib/python*/*-packages/*.la \
+	  $(CURDIR)/debian/python3-rtfcomp/usr/lib/python*/*-packages/*.a
 
 clean::
 	dh_testdir
 	rm -Rf build-*
 	dh_clean
+
+build-indep: build
+        # If no separate steps for arch-indep, this can be empty
+        # or call dh_auto_build again if needed
+
+build-arch: build
+        # If no separate steps for arch-dep, this can be empty
+        # or call dh_auto_build if needed
 
 binary-indep: build install
 
@@ -61,7 +71,7 @@ binary-arch: build install
 	dh_link -a
 	dh_compress -a
 	dh_fixperms -a
-	dh_python2 -ppython-rtfcomp
+	dh_python3 -p python3-rtfcomp
 	dh_makeshlibs -a
 	dh_installdeb -a
 	dh_shlibdeps -a
@@ -70,4 +80,4 @@ binary-arch: build install
 	dh_builddeb -a
 
 binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install
+.PHONY: build clean binary-indep binary-arch binary install build-arch build-indep
