--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -1,14 +1,14 @@
 
 if HAVE_PYTHON
 
-INCLUDES = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(top_srcdir)/include
 CLEANFILES = pyrtfcomp.c
 
 rtfcompbindingsdir = $(pyexecdir)
 rtfcompbindings_LTLIBRARIES = pyrtfcomp.la
 
 LDADD = ../src/librtfcomp.la
-pyrtfcomp_la_CFLAGS = @PYTHON_INCLUDES@ -I../include 
+pyrtfcomp_la_CFLAGS = @PYTHON_INCLUDES@ -I../include -g -O0 -Wall -Werror -Wdeprecated-declarations
 pyrtfcomp_la_LDFLAGS = -module -avoid-version -fPIC
 pyrtfcomp_la_LIBADD = $(top_builddir)/src/librtfcomp.la
 nodist_pyrtfcomp_la_SOURCES = pyrtfcomp.c
@@ -18,5 +18,5 @@ endif
 EXTRA_DIST = pyrtfcomp.pyx
 
 pyrtfcomp.c: $(srcdir)/pyrtfcomp.pyx
-	pyrexc $(srcdir)/pyrtfcomp.pyx -o ./pyrtfcomp.c
+	cython3 -3 $(srcdir)/pyrtfcomp.pyx -o ./pyrtfcomp.c
 
